# ddns-cloudflare

./: .gitignore  Cargo.toml  Cross.toml  README.md  rust-toolchain.toml
.github/: dependabot.yaml
.github/workflows/: main.yaml  main.yml
src/: api.rs  config.rs  errors.rs  ip.rs  main.rs  structs.rs
src/structs/: args.rs  cloudflare.rs  config.rs
