[package]
name = "ddns_cloudflare"
version = "0.6.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
directories = "6.0.0"
local-ip-address = "0.6.3"
mac_address = "1.1.7"
reqwest = { version = "0.12.12", default-features = false, features = [
	"json",
	"rustls-tls",
] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.19"
