[package]
name = "ddns_cloudflare"
version = "0.7.0"
edition = "2024"
license = "MPL-2.0"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
directories = "6.0.0"
local-ip-address = "0.6.10"
mac_address = "1.1.8"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.0.6"
