[package]
name = "ddns_cloudflare"
version = "0.7.1"
edition = "2024"
license = "MPL-2.0"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
local-ip-address = "0.6.13"
mac_address = "1.1.8"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
